// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioButton /> Should render 1`] = `
<Formik
  initialValues={
    Object {
      "radioGroup": "",
    }
  }
>
  <Form>
    <form
      action="#"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <RadioButton
        domId="radioBtn1"
        isCard={false}
        isDisabled={false}
        label="Radio Btn 1"
        name="radioGroup"
        value="radioBtn1"
      >
        <div
          className="input-field-container input-field-radio"
        >
          <Input
            checked={false}
            className="radio-button"
            domId="radioBtn1"
            isChecked={false}
            isDisabled={false}
            name="radioGroup"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            type="radio"
            value="radioBtn1"
          >
            <input
              checked={false}
              className="input-field"
              defaultValue="radioBtn1"
              disabled={false}
              id="radioBtn1"
              name="radioGroup"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=""
              type="radio"
            />
          </Input>
          <Indicator
            type="radio"
          >
            <span
              aria-hidden="true"
              className="indicator indicator-radio"
            />
          </Indicator>
          <div
            className="radio-button-labels undefined"
          >
            <Label
              color=""
              display="inline-block"
              fieldType="radio"
              forId="radioBtn1"
              isDisabled={false}
              required={true}
            >
              <label
                className="input-label radio inline-block"
                htmlFor="radioBtn1"
              >
                <Typography
                  color=""
                  variant="field-label"
                >
                  <span
                    className="typography typography-field-label"
                  >
                    Radio Btn 1
                  </span>
                </Typography>
              </label>
            </Label>
          </div>
        </div>
      </RadioButton>
      <RadioButton
        domId="radioBtn2"
        isCard={false}
        isDisabled={false}
        label="Radio Btn 2"
        name="radioGroup"
        value="radioBtn2"
      >
        <div
          className="input-field-container input-field-radio"
        >
          <Input
            checked={false}
            className="radio-button"
            domId="radioBtn2"
            isChecked={false}
            isDisabled={false}
            name="radioGroup"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            type="radio"
            value="radioBtn2"
          >
            <input
              checked={false}
              className="input-field"
              defaultValue="radioBtn2"
              disabled={false}
              id="radioBtn2"
              name="radioGroup"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=""
              type="radio"
            />
          </Input>
          <Indicator
            type="radio"
          >
            <span
              aria-hidden="true"
              className="indicator indicator-radio"
            />
          </Indicator>
          <div
            className="radio-button-labels undefined"
          >
            <Label
              color=""
              display="inline-block"
              fieldType="radio"
              forId="radioBtn2"
              isDisabled={false}
              required={true}
            >
              <label
                className="input-label radio inline-block"
                htmlFor="radioBtn2"
              >
                <Typography
                  color=""
                  variant="field-label"
                >
                  <span
                    className="typography typography-field-label"
                  >
                    Radio Btn 2
                  </span>
                </Typography>
              </label>
            </Label>
          </div>
        </div>
      </RadioButton>
    </form>
  </Form>
</Formik>
`;

exports[`<RadioButton /> Should render card style 1`] = `
<Formik
  initialValues={
    Object {
      "radioGroup": "",
    }
  }
>
  <Form>
    <form
      action="#"
      onReset={[Function]}
      onSubmit={[Function]}
    >
      <RadioButton
        checked={true}
        domId="myDomId"
        helperText="Optional helper text"
        isCard={true}
        isDisabled={false}
        label="Radio Button Card 1"
        name="myRadioGroup"
        value="Option 1"
      >
        <div
          className="input-field-container input-field-radio input-field-radio-card"
        >
          <Input
            checked={true}
            className="radio-button"
            domId="myDomId"
            isChecked={false}
            isDisabled={false}
            name="myRadioGroup"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            type="radio"
            value="Option 1"
          >
            <input
              checked={false}
              className="input-field"
              defaultValue="Option 1"
              disabled={false}
              id="myDomId"
              name="myRadioGroup"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=""
              type="radio"
            />
          </Input>
          <Indicator
            type="radio"
          >
            <span
              aria-hidden="true"
              className="indicator indicator-radio"
            />
          </Indicator>
          <div
            className="radio-button-labels undefined"
          >
            <Label
              color=""
              display="inline-block"
              fieldType="radio"
              forId="myDomId"
              isDisabled={false}
              required={true}
            >
              <label
                className="input-label radio inline-block"
                htmlFor="myDomId"
              >
                <Typography
                  color=""
                  variant="field-label"
                >
                  <span
                    className="typography typography-field-label"
                  >
                    Radio Button Card 1
                  </span>
                </Typography>
              </label>
            </Label>
            <HelperText>
              <div
                className="helper-text"
              >
                <Typography
                  variant="helper"
                >
                  <span
                    className="typography typography-helper"
                  >
                    Optional helper text
                  </span>
                </Typography>
              </div>
            </HelperText>
          </div>
        </div>
      </RadioButton>
      <RadioButton
        checked={true}
        domId="myDomId"
        helperText="Optional helper text"
        isCard={true}
        isDisabled={false}
        label="Radio Button Card 1"
        name="myRadioGroup"
        value="Option 1"
      >
        <div
          className="input-field-container input-field-radio input-field-radio-card"
        >
          <Input
            checked={true}
            className="radio-button"
            domId="myDomId"
            isChecked={false}
            isDisabled={false}
            name="myRadioGroup"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            type="radio"
            value="Option 1"
          >
            <input
              checked={false}
              className="input-field"
              defaultValue="Option 1"
              disabled={false}
              id="myDomId"
              name="myRadioGroup"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=""
              type="radio"
            />
          </Input>
          <Indicator
            type="radio"
          >
            <span
              aria-hidden="true"
              className="indicator indicator-radio"
            />
          </Indicator>
          <div
            className="radio-button-labels undefined"
          >
            <Label
              color=""
              display="inline-block"
              fieldType="radio"
              forId="myDomId"
              isDisabled={false}
              required={true}
            >
              <label
                className="input-label radio inline-block"
                htmlFor="myDomId"
              >
                <Typography
                  color=""
                  variant="field-label"
                >
                  <span
                    className="typography typography-field-label"
                  >
                    Radio Button Card 1
                  </span>
                </Typography>
              </label>
            </Label>
            <HelperText>
              <div
                className="helper-text"
              >
                <Typography
                  variant="helper"
                >
                  <span
                    className="typography typography-helper"
                  >
                    Optional helper text
                  </span>
                </Typography>
              </div>
            </HelperText>
          </div>
        </div>
      </RadioButton>
      <RadioButton
        checked={true}
        domId="myDomId"
        helperText="Optional helper text"
        isCard={true}
        isDisabled={false}
        label="Radio Button Card 1"
        name="myRadioGroup"
        value="Option 1"
      >
        <div
          className="input-field-container input-field-radio input-field-radio-card"
        >
          <Input
            checked={true}
            className="radio-button"
            domId="myDomId"
            isChecked={false}
            isDisabled={false}
            name="myRadioGroup"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            type="radio"
            value="Option 1"
          >
            <input
              checked={false}
              className="input-field"
              defaultValue="Option 1"
              disabled={false}
              id="myDomId"
              name="myRadioGroup"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=""
              type="radio"
            />
          </Input>
          <Indicator
            type="radio"
          >
            <span
              aria-hidden="true"
              className="indicator indicator-radio"
            />
          </Indicator>
          <div
            className="radio-button-labels undefined"
          >
            <Label
              color=""
              display="inline-block"
              fieldType="radio"
              forId="myDomId"
              isDisabled={false}
              required={true}
            >
              <label
                className="input-label radio inline-block"
                htmlFor="myDomId"
              >
                <Typography
                  color=""
                  variant="field-label"
                >
                  <span
                    className="typography typography-field-label"
                  >
                    Radio Button Card 1
                  </span>
                </Typography>
              </label>
            </Label>
            <HelperText>
              <div
                className="helper-text"
              >
                <Typography
                  variant="helper"
                >
                  <span
                    className="typography typography-helper"
                  >
                    Optional helper text
                  </span>
                </Typography>
              </div>
            </HelperText>
          </div>
        </div>
      </RadioButton>
      <RadioButton
        checked={true}
        domId="myDomId"
        helperText="Optional helper text"
        isCard={true}
        isDisabled={true}
        label="Radio Button Card 1"
        name="myRadioGroup"
        value="Option 1"
      >
        <div
          className="input-field-container input-field-radio input-field-radio-card input-field-disabled"
        >
          <Input
            checked={true}
            className="radio-button"
            domId="myDomId"
            isChecked={false}
            isDisabled={true}
            name="myRadioGroup"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder=""
            type="radio"
            value="Option 1"
          >
            <input
              checked={false}
              className="input-field"
              defaultValue="Option 1"
              disabled={true}
              id="myDomId"
              name="myRadioGroup"
              onBlur={[Function]}
              onChange={[Function]}
              placeholder=""
              type="radio"
            />
          </Input>
          <Indicator
            type="radio"
          >
            <span
              aria-hidden="true"
              className="indicator indicator-radio"
            />
          </Indicator>
          <div
            className="radio-button-labels undefined"
          >
            <Label
              color=""
              display="inline-block"
              fieldType="radio"
              forId="myDomId"
              isDisabled={true}
              required={true}
            >
              <label
                className="input-label radio inline-block isDisabled"
                htmlFor="myDomId"
              >
                <Typography
                  color=""
                  variant="field-label"
                >
                  <span
                    className="typography typography-field-label"
                  >
                    Radio Button Card 1
                  </span>
                </Typography>
              </label>
            </Label>
            <HelperText>
              <div
                className="helper-text"
              >
                <Typography
                  variant="helper"
                >
                  <span
                    className="typography typography-helper"
                  >
                    Optional helper text
                  </span>
                </Typography>
              </div>
            </HelperText>
          </div>
        </div>
      </RadioButton>
    </form>
  </Form>
</Formik>
`;
